# device_camera_avfoundation

./: CMakeLists.txt  README.md  conanfile.py
doc/utql/Sensor/: AVFoundationCapture.xml
src/AVFoundationCapture/: AVFoundationCapture.mm  CMakeLists.txt
